--- a/.github/workflows/build_and_push_docker.yaml
+++ b/.github/workflows/build_and_push_docker.yaml
@@ -41,27 +41,45 @@ env:
   DOCKER_REGISTRY: "ghcr.io/comet-ml/opik"
 
 jobs:
+  generate-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      build_matrix: ${{ steps.set-matrix.outputs.build_matrix }}
+      merge_matrix: ${{ steps.set-matrix.outputs.merge_matrix }}
+    steps:
+      - name: Generate build and merge matrices
+        id: set-matrix
+        run: |
+          # Build 2D matrix: image_type x platform
+          BUILD_MATRIX='{"image_type":["regular","comet"],"platform":["amd64","arm64"],"exclude":[]}'
+          MERGE_MATRIX='{"image_type":["regular","comet"],"exclude":[]}'
+          
+          # Exclude comet if build_comet_image is false
+          if [[ "${{ inputs.build_comet_image }}" != "true" ]]; then
+            BUILD_MATRIX=$(echo "$BUILD_MATRIX" | jq '.exclude += [{"image_type":"comet"}]')
+            MERGE_MATRIX=$(echo "$MERGE_MATRIX" | jq '.exclude += [{"image_type":"comet"}]')
+          fi
+          
+          # Exclude arm64 if not a release build or if guardrails backend
+          if [[ "${{ inputs.is_release }}" != "true" ]] || [[ "${{ inputs.image }}" == "opik-guardrails-backend" ]]; then
+            BUILD_MATRIX=$(echo "$BUILD_MATRIX" | jq '.exclude += [{"platform":"arm64"}]')
+          fi
+          
+          echo "build_matrix<<EOF" >> $GITHUB_OUTPUT
+          echo "$BUILD_MATRIX" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+          
+          echo "merge_matrix<<EOF" >> $GITHUB_OUTPUT
+          echo "$MERGE_MATRIX" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
   build:
+    needs: generate-matrix
     strategy:
       fail-fast: false
-      matrix:
-        include:
-          - image_type: regular
-            image_suffix: ""
-            platform: amd64
-          - image_type: regular
-            image_suffix: ""
-            platform: arm64
-            skip_guardrails: true
-          - image_type: comet
-            image_suffix: "-comet"
-            platform: amd64
-          - image_type: comet
-            image_suffix: "-comet"
-            platform: arm64
-            skip_guardrails: true
+      matrix: ${{ fromJson(needs.generate-matrix.outputs.build_matrix) }}
     runs-on: ${{ matrix.platform == 'amd64' && 'ubuntu-latest' || 'ubuntu-24.04-arm' }}
-    name: ${{ matrix.platform }} ${{ inputs.image }}${{ matrix.image_suffix }}
+    name: ${{ matrix.platform }} ${{ inputs.image }}${{ matrix.image_type == 'comet' && '-comet' || '' }}
     permissions:
       contents: read
       packages: write
@@ -71,20 +89,8 @@ jobs:
       image_name: ${{ steps.set_vars.outputs.image_name }}
     timeout-minutes: 60
     steps:
-      - name: Check if job should run
-        id: check
-        run: |
-          SHOULD_RUN="false"
-          if [[ "${{ matrix.image_type }}" == "regular" ]] || [[ "${{ inputs.build_comet_image }}" == "true" ]]; then
-            if [[ "${{ matrix.platform }}" != "arm64" ]] || [[ "${{ matrix.skip_guardrails }}" != "true" ]] || [[ "${{ inputs.image }}" != "opik-guardrails-backend" ]]; then
-              SHOULD_RUN="true"
-            fi
-          fi
-          echo "should_run=$SHOULD_RUN" >> $GITHUB_OUTPUT
-      
       - name: Set image variables
         id: set_vars
-        if: steps.check.outputs.should_run == 'true'
         run: |
           if [[ "${{ matrix.image_type }}" == "comet" ]]; then
             IMAGE_NAME="${{ inputs.image }}-comet"
@@ -94,19 +100,17 @@ jobs:
           echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
 
       - name: Checkout
-        if: steps.check.outputs.should_run == 'true'
         uses: actions/checkout@v4.1.1
         with:
           ref: ${{ inputs.build_from }}
 
       - name: Save opik-sandbox-executor-python
-        if: steps.check.outputs.should_run == 'true' && inputs.image == 'opik-python-backend'
+        if: inputs.image == 'opik-python-backend'
         run: |
           docker pull ${{env.DOCKER_REGISTRY}}/opik-sandbox-executor-python:${{inputs.version}}
           docker save ${{env.DOCKER_REGISTRY}}/opik-sandbox-executor-python:${{inputs.version}} | gzip > apps/opik-python-backend/opik-sandbox-executor-python.tar.gz
 
       - name: Login to GHCR
-        if: steps.check.outputs.should_run == 'true'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -114,11 +118,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
-        if: steps.check.outputs.should_run == 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Extract metadata (tags, labels) for Docker
-        if: steps.check.outputs.should_run == 'true'
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -129,7 +131,6 @@ jobs:
             type=raw,value=main,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: Build and Push Docker Image
-        if: steps.check.outputs.should_run == 'true'
         id: build
         uses: docker/build-push-action@v6
         with:
@@ -150,7 +151,6 @@ jobs:
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
       - name: Export digest
-        if: steps.check.outputs.should_run == 'true'
         run: |
           mkdir -p /tmp/digests/${{ steps.set_vars.outputs.image_name }}
           digest="${{ steps.build.outputs.digest }}"
@@ -159,7 +159,6 @@ jobs:
           echo "$HASH" > "/tmp/digests/${{ steps.set_vars.outputs.image_name }}/${{ matrix.platform }}.digest"
 
       - name: Upload digest
-        if: steps.check.outputs.should_run == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ github.run_id }}-${{ steps.set_vars.outputs.image_name }}-digest-${{ matrix.platform }}
@@ -168,31 +167,16 @@ jobs:
           retention-days: 1
 
   merge:
-    needs: build
+    needs: [generate-matrix, build]
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     strategy:
-      matrix:
-        include:
-          - image_type: regular
-            image_suffix: ""
-          - image_type: comet
-            image_suffix: "-comet"
+      matrix: ${{ fromJson(needs.generate-matrix.outputs.merge_matrix) }}
     steps:
-      - name: Check if job should run
-        id: check
-        run: |
-          SHOULD_RUN="false"
-          if [[ "${{ matrix.image_type }}" == "regular" ]] || [[ "${{ inputs.build_comet_image }}" == "true" ]]; then
-            SHOULD_RUN="true"
-          fi
-          echo "should_run=$SHOULD_RUN" >> $GITHUB_OUTPUT
-      
       - name: Set image variables
         id: set_vars
-        if: steps.check.outputs.should_run == 'true'
         run: |
           if [[ "${{ matrix.image_type }}" == "comet" ]]; then
             IMAGE_NAME="${{ inputs.image }}-comet"
@@ -202,7 +186,6 @@ jobs:
           echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
 
       - name: Download digests
-        if: steps.check.outputs.should_run == 'true'
         uses: actions/download-artifact@v4
         with:
           path: /tmp/digests/${{ steps.set_vars.outputs.image_name }}
@@ -210,11 +193,9 @@ jobs:
           merge-multiple: false
           
       - name: Set up Docker Buildx
-        if: steps.check.outputs.should_run == 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GHCR
-        if: steps.check.outputs.should_run == 'true'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -222,7 +203,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        if: steps.check.outputs.should_run == 'true'
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -233,7 +213,6 @@ jobs:
             type=raw,value=main,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: Create manifest list and push tags
-        if: steps.check.outputs.should_run == 'true'
         run: |
           cd /tmp/digests/${{ steps.set_vars.outputs.image_name }}
           
@@ -275,14 +254,15 @@ jobs:
           docker buildx imagetools create $TAG_ARGS $DIGESTS
 
       - name: Write Build Summary
-        if: steps.check.outputs.should_run == 'true'
         run: |
           echo "### Docker images pushed: ${{ steps.set_vars.outputs.image_name }}" >> $GITHUB_STEP_SUMMARY
           echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
           if [[ "${{ inputs.image }}" == "opik-guardrails-backend" ]]; then
             echo "Built for platforms: linux/amd64" >> $GITHUB_STEP_SUMMARY
-          else
+          elif [[ "${{ inputs.is_release }}" == "true" ]]; then
             echo "Built for platforms: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "Built for platforms: linux/amd64" >> $GITHUB_STEP_SUMMARY
           fi
           echo "- [View on GitHub Container Registry](https://github.com/${{ github.repository }}/pkgs/container/opik%2F${{ steps.set_vars.outputs.image_name }})" >> $GITHUB_STEP_SUMMARY
 
