--- a/.github/workflows/build_and_push_docker.yaml
+++ b/.github/workflows/build_and_push_docker.yaml
@@ -143,18 +143,18 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             OPIK_VERSION=${{ inputs.version }}
-            ${{ matrix.image_type == 'comet' && inputs.comet_build_args || '' }}
-            ${{ matrix.image_type == 'comet' && 'SENTRY_ENABLED=true' || '' }}
-            ${{ matrix.image_type == 'comet' && format('SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) || '' }}
+            ${{ matrix.image_type == 'comet' && (
+              format('{0}\nSENTRY_ENABLED=true\nSENTRY_DSN={1}', inputs.comet_build_args, secrets.OPIK_FE_SENTRY_DSN)
+            ) || '' }}
           secrets: |
-            ${{ matrix.image_type == 'comet' && format('OPIK_FE_SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) || '' }}
+            ${{ matrix.image_type == 'comet' && secrets.OPIK_FE_SENTRY_DSN != '' && format('OPIK_FE_SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) || '' }}
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
       - name: Export digest
         run: |
           mkdir -p /tmp/digests/${{ steps.set_vars.outputs.image_name }}
           digest="${{ steps.build.outputs.digest }}"
-          # Remove sha256: prefix if present
+          # Strip sha256: prefix
           HASH="${digest#sha256:}"
           echo "$HASH" > "/tmp/digests/${{ steps.set_vars.outputs.image_name }}/${{ matrix.platform }}.digest"
 
@@ -190,7 +190,6 @@ jobs:
         with:
           path: /tmp/digests/${{ steps.set_vars.outputs.image_name }}
           pattern: ${{ github.run_id }}-${{ steps.set_vars.outputs.image_name }}-digest-*
-          merge-multiple: false
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -217,16 +216,14 @@ jobs:
           cd /tmp/digests/${{ steps.set_vars.outputs.image_name }}
           
           DIGESTS=""
-          ARTIFACT_PATTERN="${{ github.run_id }}-${{ steps.set_vars.outputs.image_name }}-digest-*"
           
-          for artifact_dir in $ARTIFACT_PATTERN; do
+          for artifact_dir in ${{ github.run_id }}-${{ steps.set_vars.outputs.image_name }}-digest-*; do
             if [ -d "$artifact_dir" ]; then
               PLATFORM="${artifact_dir##*-}"
               DIGEST_FILE="$artifact_dir/$PLATFORM.digest"
               
               if [ -f "$DIGEST_FILE" ]; then
-                DIGEST_VALUE=$(cat "$DIGEST_FILE" | tr -d '\n\r ')
-                DIGEST_REF="${{ env.DOCKER_REGISTRY }}/${{ steps.set_vars.outputs.image_name }}@sha256:$DIGEST_VALUE"
+                DIGEST_VALUE=$(tr -d '\n\r ' < "$DIGEST_FILE")
                 DIGESTS="$DIGESTS $DIGEST_REF"
               fi
             fi
