--- a/.github/workflows/documentation_preview_link.yml
+++ b/.github/workflows/documentation_preview_link.yml
@@ -39,9 +39,12 @@ jobs:
                 pip install -e sdks/opik_optimizer
 
             - name: Generate Opik Optimizer Fern docs
+              env:
+                BASE_SHA: ${{ github.event.pull_request.base.sha }}
+                HEAD_SHA: ${{ github.sha }}
               run: |
                 # Only regenerate optimizer docs when optimizer files change to avoid slowing unrelated PRs
-                if git diff --name-only origin/${{ github.base_ref }}... | grep -E '^sdks/opik_optimizer/(.*\\.py|pyproject\\.toml|setup\\.py)$'; then
+                if git diff --name-only "$BASE_SHA"..."$HEAD_SHA" | grep -E '^sdks/opik_optimizer/(.*\\.py|pyproject\\.toml|setup\\.py)$'; then
                   python sdks/opik_optimizer/scripts/generate_fern_docs.py --write
                 else
                   echo "No optimizer SDK changes detected; skipping optimizer doc generation."
