--- a/apps/opik-documentation/documentation/fern/openapi/opik.yaml
+++ b/apps/opik-documentation/documentation/fern/openapi/opik.yaml
@@ -11615,9 +11615,15 @@ components:
           $ref: "#/components/schemas/PromptVersion_Detail"
         template_structure:
           type: string
+          description: "Template structure for the prompt: 'text' or 'chat'. Note:\
+            \ This field is only used when creating a new prompt. If a prompt with\
+            \ the given name already exists, this field is ignored and the existing\
+            \ prompt's template structure is used. Template structure is immutable\
+            \ after prompt creation."
           enum:
           - text
           - chat
+          default: text
     Prompt_Detail:
       required:
       - name
