--- a/sdks/opik_optimizer/benchmarks/configs/gepa_smoke.manifest.json
+++ b/sdks/opik_optimizer/benchmarks/configs/gepa_smoke.manifest.json
@@ -3,7 +3,7 @@
   "test_mode": true,
   "tasks": [
     {
-      "dataset": "hotpot",
+      "dataset": "hotpot_train",
       "datasets": {
         "train": { "loader": "hotpot", "split": "train", "count": 10, "dataset_name": "hotpot_train_sample" },
         "validation": { "loader": "hotpot", "split": "validation", "count": 5, "dataset_name": "hotpot_validation_sample" },
@@ -14,7 +14,7 @@
       "optimizer_prompt_params": { "max_trials": 2, "n_samples": 1 }
     },
     {
-      "dataset": "hotpot",
+      "dataset": "hotpot_train",
       "datasets": {
         "train": { "loader": "hotpot", "split": "train", "count": 10, "dataset_name": "hotpot_train_sample" },
         "validation": { "loader": "hotpot", "split": "validation", "count": 5, "dataset_name": "hotpot_validation_sample" },
@@ -25,7 +25,7 @@
       "optimizer_prompt_params": { "max_trials": 2 }
     },
     {
-      "dataset": "hover",
+      "dataset": "hover_train",
       "datasets": {
         "train": { "loader": "hover", "split": "train", "count": 10, "dataset_name": "hover_train_sample" },
         "validation": { "loader": "hover", "split": "validation", "count": 5, "dataset_name": "hover_validation_sample" },
@@ -36,7 +36,7 @@
       "optimizer_prompt_params": { "max_trials": 2, "n_samples": 1 }
     },
     {
-      "dataset": "ifbench",
+      "dataset": "ifbench_train",
       "datasets": {
         "train": { "loader": "ifbench", "split": "train", "count": 10, "dataset_name": "ifbench_train_sample" },
         "validation": { "loader": "ifbench", "split": "validation", "count": 5, "dataset_name": "ifbench_validation_sample" },
@@ -47,7 +47,7 @@
       "optimizer_prompt_params": { "max_trials": 2, "n_samples": 1 }
     },
     {
-      "dataset": "pupa",
+      "dataset": "pupa_train",
       "datasets": {
         "train": { "loader": "pupa", "split": "train", "count": 10, "dataset_name": "pupa_train_sample" },
         "validation": { "loader": "pupa", "split": "validation", "count": 5, "dataset_name": "pupa_validation_sample" },
