--- a/sdks/opik_optimizer/scripts/benchmarks/tasks.example.json
+++ b/sdks/opik_optimizer/scripts/benchmarks/tasks.example.json
@@ -10,7 +10,7 @@
         "dataset_name": "hotpot_train"
       },
       "optimizer": "few_shot",
-      "model": "openai/gpt-4o-mini",
+      "model": "openai/gpt-4.1-mini",
       "model_parameters": { "temperature": 0.3 },
       "optimizer_prompt_params": { "max_trials": 1, "n_samples": 1 },
       "metrics": ["benchmarks.metrics.hotpot.hotpot_f1"],
@@ -23,7 +23,7 @@
       "dataset": "tiny_test",
       "datasets": { "train": { "loader": "tiny_test", "count": 3 } },
       "optimizer": "evolutionary_optimizer",
-      "model": "openai/gpt-4o-mini",
+      "model": "openai/gpt-4.1-mini",
       "optimizer_prompt_params": { "max_trials": 1, "population_size": 2, "num_generations": 1 },
       "metrics": [
         {
@@ -44,7 +44,7 @@
         "test": { "loader": "hotpot", "split": "test", "count": 2 }
       },
       "optimizer": "hierarchical_reflective",
-      "model": "openai/gpt-4o-mini",
+      "model": "openai/gpt-4.1-mini",
       "optimizer_prompt_params": { "max_trials": 2 },
       "prompt": [
         { "role": "system", "content": "Answer the question based on the given context." },
