Simplification of cursor extension

--- a/extensions/cursor/package.json
+++ b/extensions/cursor/package.json
@@ -91,6 +91,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/sql.js": "^1.4.5",
+    "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.90.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
@@ -105,6 +106,7 @@
     "glob": "^11.0.1",
     "node-fetch": "^3.3.2",
     "opik": "^1.7.2",
-    "sql.js": "^1.10.2"
+    "sql.js": "^1.10.2",
+    "uuid": "^10.0.0"
   }
 }
