Simplification of cursor extension

--- a/extensions/cursor/package.json
+++ b/extensions/cursor/package.json
@@ -106,7 +106,6 @@
     "glob": "^11.0.1",
     "node-fetch": "^3.3.2",
     "opik": "^1.7.2",
-    "sql.js": "^1.10.2",
-    "uuid": "^10.0.0"
+    "sql.js": "^1.10.2"
   }
 }
