--- a/.github/workflows/documentation_preview_link.yml
+++ b/.github/workflows/documentation_preview_link.yml
@@ -1,6 +1,7 @@
 name: Docs - Preview link
 
 on:
+  workflow_dispatch:
   pull_request:
     paths:
         - 'apps/opik-documentation/documentation/**'
