--- a/tests_end_to_end/models_config.yaml
+++ b/tests_end_to_end/models_config.yaml
@@ -8,6 +8,11 @@ providers:
     display_name: "OpenAI"
     api_key_env_var: "OPENAI_API_KEY"
     models:
+      - name: "GPT 5.1"
+        ui_selector: "GPT 5.1"
+        enabled: true
+        test_playground: true
+        test_online_scoring: true
       - name: "GPT 4o Mini"
         ui_selector: "GPT 4o Mini"
         enabled: true
@@ -25,6 +30,16 @@ providers:
         test_online_scoring: true
       - name: "GPT 4.1 Mini"
         ui_selector: "GPT 4.1 Mini"
+        enabled: true
+        test_playground: true
+        test_online_scoring: true
+
+  gemini:
+    display_name: "Gemini"
+    api_key_env_var: "GEMINI_API_KEY"
+    models:
+      - name: "Gemini 3 Pro"
+        ui_selector: "Gemini 3 Pro"
         enabled: true
         test_playground: true
         test_online_scoring: true
