--- a/tests_end_to_end/tests_end_to_end_ts/typescript-tests/models_config.yaml
+++ b/tests_end_to_end/tests_end_to_end_ts/typescript-tests/models_config.yaml
@@ -8,6 +8,11 @@ providers:
     display_name: "OpenAI"
     api_key_env_var: "OPENAI_API_KEY"
     models:
+      - name: "GPT 5.1"
+        ui_selector: "GPT 5.1"
+        enabled: true
+        test_playground: true
+        test_online_scoring: true
       - name: "GPT 5"
         ui_selector: "GPT 5"
         enabled: true
@@ -43,6 +48,16 @@ providers:
         enabled: false
         test_playground: false
         test_online_scoring: false
+
+  gemini:
+    display_name: "Gemini"
+    api_key_env_var: "GEMINI_API_KEY"
+    models:
+      - name: "Gemini 3 Pro"
+        ui_selector: "Gemini 3 Pro"
+        enabled: true
+        test_playground: true
+        test_online_scoring: true
 
   anthropic:
     display_name: "Anthropic"
