--- a/apps/opik-frontend/package.json
+++ b/apps/opik-frontend/package.json
@@ -59,6 +59,7 @@
     "@tanstack/react-virtual": "^3.13.4",
     "@types/diff": "^5.2.2",
     "@types/md5": "^2.3.5",
+    "@types/react-grid-layout": "^1.3.6",
     "@types/segment-analytics": "^0.0.38",
     "@uiw/codemirror-extensions-hyper-link": "^4.25.1",
     "@uiw/codemirror-theme-github": "^4.23.3",
@@ -91,6 +92,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.5.1",
     "react-intersection-observer": "^10.0.0",
