--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -419,6 +419,9 @@ serviceToggles:
   # Default: true
   # Description: Whether or not export/download functionality is enabled
   exportEnabled: "true"
+  # Default: false
+  # Description: Whether or not Dashboards feature is enabled
+  dashboardsEnabled: "false"
 
 # Trace Thread configuration
 traceThreadConfig:
