--- a/sdks/opik_optimizer/.pre-commit-config.yaml
+++ b/sdks/opik_optimizer/.pre-commit-config.yaml
@@ -19,14 +19,14 @@ repos:
       - id: check-case-conflict
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.21.1
+    rev: v3.21.2
     hooks:
       - id: pyupgrade
         args: [--py310-plus]
         files: ^sdks/opik_optimizer
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.5
+    rev: v0.14.6
     hooks:
       - id: ruff
         args: [ --fix, --show-fixes]
@@ -44,7 +44,7 @@ repos:
         additional_dependencies: [types-requests, pytest, pyrate_limiter, modal]
 
   - repo: https://github.com/kynan/nbstripout
-    rev: 0.6.1
+    rev: 0.8.2
     hooks:
       - id: nbstripout
         files: ^sdks/opik_optimizer/.*\.ipynb$
@@ -54,12 +54,19 @@ repos:
     hooks:
       - id: markdownlint
         files: ^sdks/opik_optimizer/.*\.md$
-        args: ['--disable=MD013', '--disable=MD033']
+        args: ['--disable=MD013', '--disable=MD033', '--disable=MD060']
 
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.6
+    rev: v2.4.1
     hooks:
       - id: codespell
         files: ^sdks/opik_optimizer
         exclude: '(\.ipynb$)|(\.json$)|(\.jsonl$)|(benchmark_results/)'
         args: ['--skip=*.ipynb,*.json,*.jsonl','--write-changes']
+
+  - repo: https://github.com/jendrikseipp/vulture
+    rev: v2.14
+    hooks:
+      - id: vulture
+        files: ^sdks/opik_optimizer
+        args: ['sdks/opik_optimizer/src', 'sdks/opik_optimizer/tests', 'sdks/opik_optimizer/scripts', 'sdks/opik_optimizer/benchmarks', '--min-confidence=80']
